--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <section class="info">
       <div>
         <span class="label">Когда</span>
-        <span class="value">Сегодня, 20:00–22:00 🌆</span>
+        <span class="value">Сегодня, 18:00–22:00 🌆</span>
       </div>
       <div>
         <span class="label">Старт</span>
-        <span class="value">Центр, главная площадь 📍</span>
+        <span class="value">Восток-5 📍</span>
       </div>
       <div>
         <span class="label">Темп</span>
@@ -56,3 +56,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
