--- a/index.html
+++ b/index.html
@@ -3,57 +3,203 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Вечерний прокат 🚲</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Вечерний прокат 🚴</title>
+  <style>
+    /* ====== Базовый стиль ====== */
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #0f172a, #1e1b4b, #000);
+      color: white;
+      text-align: center;
+      overflow-x: hidden;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem 1rem;
+      position: relative;
+      z-index: 5;
+    }
+
+    /* ====== Карточка ====== */
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(6px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+    }
+
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 0.5rem;
+      line-height: 1.3;
+    }
+    .subtitle {
+      color: #ccc;
+      margin-bottom: 1.5rem;
+      font-size: 1rem;
+      line-height: 1.4;
+    }
+
+    /* ====== Инфо блок ====== */
+    .info {
+      display: flex;
+      justify-content: space-around;
+      margin: 1.5rem 0;
+      flex-wrap: wrap;
+      gap: 0.8rem;
+    }
+    .info div {
+      flex: 1 1 120px;
+      background: rgba(255,255,255,0.07);
+      border-radius: 10px;
+      padding: 0.7rem 1rem;
+      min-width: 120px;
+    }
+    .label {
+      display: block;
+      font-size: 0.8rem;
+      color: #aaa;
+    }
+    .value {
+      font-size: 1.1rem;
+    }
+
+    /* ====== Кнопки ====== */
+    .buttons {
+      margin-top: 1rem;
+      display: flex;
+      gap: 0.5rem;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    .btn {
+      padding: 0.8rem 1.4rem;
+      border-radius: 15px;
+      text-decoration: none;
+      border: none;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.3s;
+      font-size: 1rem;
+    }
+    .btn:hover { transform: scale(1.05); }
+    .primary { background: #6366f1; color: white; }
+    .secondary { background: rgba(255,255,255,0.1); color: white; border: 1px solid rgba(255,255,255,0.2); }
+    .ghost { background: transparent; color: #ccc; border: 1px solid rgba(255,255,255,0.2); }
+
+    .hint {
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+      color: #aaa;
+    }
+
+    footer {
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      color: #aaa;
+      line-height: 1.4;
+    }
+
+    /* ====== 📱 Мобильная адаптация ====== */
+    @media (max-width: 600px) {
+      h1 { font-size: 1.6rem; }
+      .subtitle { font-size: 0.9rem; }
+      .card { padding: 1.2rem; }
+      .buttons { flex-direction: column; }
+      .btn { width: 100%; }
+      .info { flex-direction: column; align-items: stretch; }
+      .info div { min-width: auto; }
+    }
+
+    /* ====== 💻 Для больших экранов ====== */
+    @media (min-width: 1200px) {
+      h1 { font-size: 2.8rem; }
+      .subtitle { font-size: 1.2rem; }
+      .card { max-width: 900px; padding: 3rem; }
+      .btn { font-size: 1.1rem; padding: 1rem 2rem; }
+    }
+
+    /* ====== Фоновые эмодзи ====== */
+    .background {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .emoji {
+      position: absolute;
+      font-size: 2rem;
+      animation: fall linear infinite;
+      opacity: 0.8;
+    }
+
+    @keyframes fall {
+      0% { transform: translateY(-10%); opacity: 0; }
+      20% { opacity: 1; }
+      100% { transform: translateY(110vh); opacity: 0; }
+    }
+  </style>
 </head>
 <body>
+  <!-- Фоновые эмодзи -->
   <div class="background">
-    <!-- Велосипеды и эмоджи на фоне -->
-    <div class="bike" style="top:10%; animation-delay: 0s;">🚲</div>
-    <div class="bike" style="top:20%; animation-delay: 4s;">😊</div>
-    <div class="bike" style="top:30%; animation-delay: 8s;">🚲</div>
-    <div class="bike" style="top:40%; animation-delay: 12s;">🦔</div>
-    <div class="bike" style="top:50%; animation-delay: 16s;">🚲</div>
-    <div class="bike" style="top:60%; animation-delay: 20s;">✨</div>
-    <div class="bike" style="top:70%; animation-delay: 24s;">🚲</div>
-    <div class="bike" style="top:80%; animation-delay: 28s;">🎉</div>
+    <div class="emoji" style="left:5%; animation-duration:12s;">🚴</div>
+    <div class="emoji" style="left:15%; animation-duration:14s;">🦔</div>
+    <div class="emoji" style="left:25%; animation-duration:16s;">✨</div>
+    <div class="emoji" style="left:35%; animation-duration:18s;">🎉</div>
+    <div class="emoji" style="left:45%; animation-duration:20s;">😎</div>
+    <div class="emoji" style="left:55%; animation-duration:22s;">🚴‍♀️</div>
+    <div class="emoji" style="left:65%; animation-duration:19s;">🌙</div>
+    <div class="emoji" style="left:75%; animation-duration:17s;">⭐</div>
+    <div class="emoji" style="left:85%; animation-duration:15s;">🔥</div>
+    <div class="emoji" style="left:95%; animation-duration:13s;">🍵</div>
   </div>
 
-  <main class="card">
-    <h1>Вечерний прокат по городу 🚲🎉</h1>
-    <p class="subtitle">Лёгкий темп, красивые улицы и остановка на горячий чай ☕. Присоединяйся сегодня вечером! ✨</p>
+  <div class="container">
+    <div class="card">
+      <h1>Вечерний прокат по городу 🚲</h1>
+      <p class="subtitle">Лёгкий темп, красивые улицы и остановка на горячий чай. Присоединяйся сегодня вечером!</p>
 
-    <section class="info">
-      <div>
-        <span class="label">Когда</span>
-        <span class="value">Сегодня, 18:00–22:00 🌆</span>
+      <div class="info">
+        <div><span class="label">Когда</span><span class="value">Сегодня, 20:00–22:00</span></div>
+        <div><span class="label">Старт</span><span class="value">Центр, главная площадь</span></div>
+        <div><span class="label">Темп</span><span class="value">Спокойный</span></div>
       </div>
-      <div>
-        <span class="label">Старт</span>
-        <span class="value">Восток-5 📍</span>
-      </div>
-      <div>
-        <span class="label">Темп</span>
-        <span class="value">спокойный 😌</span>
-      </div>
-    </section>
 
-    <p>Если тебе ок — жми на кнопку 👇. Откроется чат в Telegram, где быстро согласуем детали 💬</p>
+      <p>Если тебе ок — жми на кнопку. Откроется чат в Telegram, где быстро согласуем детали.</p>
 
-    <div class="buttons">
-      <a href="https://t.me/bakai_i" target="_blank" class="btn primary">🚀 Давай!</a>
-      <a href="https://t.me/bakai_i" target="_blank" class="btn secondary">👌 Окей</a>
-      <button id="copyBtn" class="btn ghost">🔗 Скопировать ссылку</button>
+      <div class="buttons">
+        <a href="https://t.me/bakai_i" target="_blank" class="btn primary">Давай!</a>
+        <a href="https://t.me/bakai_i" target="_blank" class="btn secondary">Окей</a>
+        <button class="btn ghost" onclick="copyLink()">Скопировать ссылку</button>
+      </div>
+
+      <div id="hint" class="hint"></div>
+
+      <footer>
+        🪖 Шлемы приветствуются.<br>
+        🔦 Фары/свет — обязательно.<br>
+        ✨ Будет весело!
+      </footer>
     </div>
+  </div>
 
-    <p id="hint" class="hint"></p>
-
-    <footer>
-      🦺 Шлемы приветствуются. 🔦 Фары/свет — обязательно. 🙌
-    </footer>
-  </main>
-
-  <script src="script.js"></script>
+  <script>
+    const tgLink = "https://t.me/bakai_i";
+    function copyLink() {
+      navigator.clipboard.writeText(tgLink).then(() => {
+        document.getElementById("hint").innerText = "Ссылка скопирована ✅";
+        setTimeout(()=> document.getElementById("hint").innerText = "", 2000);
+      });
+    }
+  </script>
 </body>
 </html>
-
