--- a/index.html
+++ b/index.html
@@ -7,43 +7,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="background"></div>
+  <div class="emoji-bg" id="emoji-bg"></div>
 
   <main class="card">
-    <h1>Вечерний прокат по городу 🚲</h1>
-    <p class="subtitle">
-      Лёгкий темп, красивые улицы и остановка на горячий чай. Присоединяйся сегодня вечером!
-    </p>
+    <header>
+      <h1>Вечерний прокат по городу 🚲✨</h1>
+      <p>Красивые улицы, лёгкий темп и чай на остановке. Присоединяйся!</p>
+    </header>
 
     <section class="info">
-      <div>
-        <span class="label">Когда</span>
-        <span class="value">Сегодня, 20:00–22:00</span>
-      </div>
-      <div>
-        <span class="label">Старт</span>
-        <span class="value">Центр, главная площадь</span>
-      </div>
-      <div>
-        <span class="label">Темп</span>
-        <span class="value">спокойный</span>
-      </div>
+      <div><strong>Когда:</strong> Сегодня, 20:00–22:00</div>
+      <div><strong>Старт:</strong> Центр, главная площадь</div>
+      <div><strong>Темп:</strong> спокойный 🚴‍♂️</div>
     </section>
 
-    <p>
-      Если тебе ок — жми на кнопку. Откроется чат в Telegram, где быстро согласуем детали.
-    </p>
-
-    <div class="buttons">
+    <section class="actions">
       <a href="https://t.me/bakai_i" target="_blank" class="btn primary">Давай!</a>
       <a href="https://t.me/bakai_i" target="_blank" class="btn secondary">Окей</a>
-      <button id="copyBtn" class="btn ghost">Скопировать ссылку</button>
-    </div>
-
-    <p id="hint" class="hint"></p>
+      <button class="btn ghost" id="copyBtn">Скопировать ссылку</button>
+    </section>
 
     <footer>
-      Шлемы приветствуются. Фары/свет — обязательно.
+      🦔 Шлемы приветствуются, фонарики обязательны 🌙
     </footer>
   </main>
 
