--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <section class="info">
-      <div><strong>Когда:</strong> Сегодня, 20:00–22:00</div>
-      <div><strong>Старт:</strong> Центр, главная площадь</div>
+      <div><strong>Когда:</strong> Сегодня, 18:00–22:00</div>
+      <div><strong>Старт:</strong> Центр, Восток-5</div>
       <div><strong>Темп:</strong> спокойный 🚴‍♂️</div>
     </section>
 
@@ -35,3 +35,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
