--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="info">
       <div><strong>Когда:</strong> Сегодня, 18:00–22:00</div>
-      <div><strong>Старт:</strong> Центр, Восток-5</div>
+      <div><strong>Старт:</strong> Восток-5</div>
       <div><strong>Темп:</strong> спокойный 🚴‍♂️</div>
     </section>
 
@@ -35,4 +35,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
